role deletion now creates draft before approval